playing with font and color

--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -12,6 +12,7 @@
   text-align: center;
 
   &-overview {
-    font-size: 16px;
+    font-size: 18.5px;
+    font-family: 'Fanwood Text', serif;
   }
 }
