--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -25,7 +25,7 @@
             <h4>Fax: 888-507-5696</h4>
           </ul>
         </li>
-        <div class="list-group-item align-center panel-danger social">
+        <div class="list-group-item align-center panel-default social">
           <a target="_blank" href="#"><i class="fa fa-facebook-square social-icon social-fb" aria-hidden="true"></i></a>
           <a target="_blank" href="#"><i class="fa fa-twitter-square social-icon social-tt" aria-hidden="true"></i></a>
           <a target="_blank" href="#"><i class="fa fa-linkedin-square social-icon social-li" aria-hidden="true"></i></a>
