--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,12 +1,24 @@
 $m-gutter: 1rem;
 
+$navbar-default-link-color: #fff;
+$navbar-default-link-hover-color: #ccc;
+
+$navbar-default-brand-color: #fff;
+
+$navbar-default-bg: rgba(#043175,.87);
+
+$footer-default-bg: rgba(#043175,.87);
+
+$panel-default-text: #fff;
+$panel-default-border: rgba(#043175,.87);
+$panel-default-heading-bg: rgba(#043175,.87);
+
 @import "ember-bootstrap/bootstrap";
 
 @import 'reset';
 @import "home";
 @import 'contact';
 @import 'companies';
-
 
 .section {
   padding: $m-gutter * 2;
@@ -44,4 +56,9 @@ $m-gutter: 1rem;
   margin: $m-gutter;
   margin-right: 0;
   font-size: 18px;
+}
+
+.footer {
+  color: #fff;
+  background-color: $footer-default-bg;
 }
