--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -1,8 +1,10 @@
-<div class="custom-banner"></div>
-<div class="section">
-  <div class="container">
-    <div class="company">
-      <p class="company-overview">Tennessee Network Technologies Inc. is a network infrastructure and special equipment installation company. Tennessee Network Technologies has technicians in every State of the Union and is the exclusive installer of Nanovo Solutions’ equipment. Certified technicians are able to install and maintain air and surface purification equipment, voice, data, audio, and video networks for commercial, industrial, retail and military business on a local and national basis.</p>
+<div class="content">
+  <div class="custom-banner"></div>
+  <div class="section">
+    <div class="container">
+      <div class="company">
+        <p class="company-overview">Tennessee Network Technologies Inc. is a network infrastructure and special equipment installation company. Tennessee Network Technologies has technicians in every State of the Union and is the exclusive installer of Nanovo Solutions’ equipment. Certified technicians are able to install and maintain air and surface purification equipment, voice, data, audio, and video networks for commercial, industrial, retail and military business on a local and national basis.</p>
+      </div>
     </div>
   </div>
 </div>
