--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,36 +1,38 @@
-<div class="section">
-  <div class="container">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h2 class="align-center">Contact Us</h2>
-        <h4 class="align-center">We would love to hear from you!</h4>
-      </div>
-      <ul class="list-group">
-        <li class="list-group-item align-center panel-default">
-          <ul>
-              <h4>Mailing Address:</h4>
-              <h4>242 West Main Street</h4>
-              <h4>Suite 116</h4>
-              <h4>Hendersonville TN 37075</h4>
-          </ul>
-        </li>
-        <li class="list-group-item align-center panel-default">
-          <ul>
-            <h4>dispatch@tnnettech.com</h4>
-          </ul>
-        </li>
-        <li class="list-group-item align-center panel-default">
-          <ul>
-            <h4>Phone: 615-264-8656</h4>
-            <h4>Fax: 888-507-5696</h4>
-          </ul>
-        </li>
-        <div class="list-group-item align-center panel-default social">
-          <a target="_blank" href="#"><i class="fa fa-facebook-square social-icon social-fb" aria-hidden="true"></i></a>
-          <a target="_blank" href="#"><i class="fa fa-twitter-square social-icon social-tt" aria-hidden="true"></i></a>
-          <a target="_blank" href="#"><i class="fa fa-linkedin-square social-icon social-li" aria-hidden="true"></i></a>
+<div class="content">
+  <div class="section">
+    <div class="container">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h2 class="align-center">Contact Us</h2>
+          <h4 class="align-center">We would love to hear from you!</h4>
         </div>
-      </ul>
+        <ul class="list-group">
+          <li class="list-group-item align-center panel-default">
+            <ul>
+                <h4>Mailing Address:</h4>
+                <h4>242 West Main Street</h4>
+                <h4>Suite 116</h4>
+                <h4>Hendersonville TN 37075</h4>
+            </ul>
+          </li>
+          <li class="list-group-item align-center panel-default">
+            <ul>
+              <h4>dispatch@tnnettech.com</h4>
+            </ul>
+          </li>
+          <li class="list-group-item align-center panel-default">
+            <ul>
+              <h4>Phone: 615-264-8656</h4>
+              <h4>Fax: 888-507-5696</h4>
+            </ul>
+          </li>
+          <div class="list-group-item align-center panel-default social">
+            <a target="_blank" href="#"><i class="fa fa-facebook-square social-icon social-fb" aria-hidden="true"></i></a>
+            <a target="_blank" href="#"><i class="fa fa-twitter-square social-icon social-tt" aria-hidden="true"></i></a>
+            <a target="_blank" href="#"><i class="fa fa-linkedin-square social-icon social-li" aria-hidden="true"></i></a>
+          </div>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
