--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -55,7 +55,7 @@ $panel-default-heading-bg: rgba(#043175,.87);
 .logo {
   margin: $m-gutter;
   margin-left: 0;
-  width: 10rem;
+  width: auto;
 }
 
 .nav-text {
