--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,8 +2,8 @@
   <nav class="navbar navbar-default negative-margin">
     <div class="container">
       <div class="navbar-header">
-        {{#link-to "home" class="navbar-brand nav-text"}}
-          Tennessee Network Technologies, Inc.
+        {{#link-to "home" class=""}}
+          <img src="http://placecage.com/300/50" alt="" class="logo">
         {{/link-to}}
       </div>
       <div>
