Change background image

--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -1,7 +1,7 @@
 .custom-banner {
   width: 100%;
   height: 40rem;
-  background: linear-gradient(180deg, rgba(#043175,.87), rgba(#0167ff,.87) 50%, rgba(#043175,.87)), url('../img/tnt-banner.jpeg') no-repeat center fixed;
+  background: url('../img/code-bg-alt.jpg') no-repeat fixed;
   background-size: cover;
   margin: 0;
 }
