--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,18 +2,24 @@
   <nav class="navbar">
     <div class="navbar__logo">
       {{#link-to "home" class=""}}
-        <img src="http://placecage.com/300/50" alt="" class="logo">
+        <p class="nav-link">TNT</p>
+        {{!-- <img src="http://placecage.com/300/50" alt="" class="logo"> --}}
       {{/link-to}}
     </div>
     <div>
       <ul class="navbar__links">
         {{#link-to "companies" class="nav-link"}}Affiliated Companies{{/link-to}}
+        {{#link-to "contact" class="nav-link"}}About Us{{/link-to}}
+        {{#link-to "contact" class="nav-link"}}Services{{/link-to}}
+        {{#link-to "contact" class="nav-link"}}Clients{{/link-to}}
+        {{#link-to "contact" class="nav-link"}}Solutions{{/link-to}}
         {{#link-to "contact" class="nav-link"}}Contact Us{{/link-to}}
+        {{#link-to "contact" class="nav-link"}}Request Ticket{{/link-to}}
       </ul>
     </div>
   </nav>
 
-  {{outlet}}
+  <div class="below-nav">{{outlet}}</div>
 
   <footer id="footer" class="footer section">
     <div class="container flex-end">© 2017 Tennessee Network Technologies, Inc.</div>
