--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -1,5 +1,15 @@
 <div class="content">
-  <div class="custom-banner"></div>
+  <div class="banner">
+    <div class="section">
+      <div class="container">
+        <div class="banner__content">
+          <h1 class="banner__text">On time.</h1>
+          <h1 class="banner__text">On budget.</h1>
+          <h1 class="banner__text">Consistent Outcomes.</h1>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="section">
     <div class="container">
       <div class="company">
