--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -14,7 +14,39 @@
     <div class="container">
       <div class="company">
         <h1 class="title-text">About Us</h1>
-        <p class="company-overview">Tennessee Network Technologies Inc. is a network infrastructure and special equipment installation company. Tennessee Network Technologies has technicians in every State of the Union and is the exclusive installer of Nanovo Solutions’ equipment. Certified technicians are able to install and maintain air and surface purification equipment, voice, data, audio, and video networks for commercial, industrial, retail and military business on a local and national basis.</p>
+        <div class="company-overview">
+          <p>Tennessee Network Technologies Inc. is a network
+            infrastructure and special equipment installation company.
+            Tennessee Network Technologies has technicians in every
+            State of the Union and is the exclusive installer of Nanovo Solutions’
+            equipment. Certified technicians are able to install and
+            maintain air and surface purification equipment, voice,
+            data, audio, and video networks for commercial, industrial,
+            retail and military business on a local and national basis.
+            Tennessee Network Technologies has built lasting relationships
+            providing excellent services in both break/fix and rollout
+            deployments in the Commercial / Retail arena.</p>
+            <h3 class="subtitle">Tennessee Network Technologies Offers:</h3>
+
+            <div class="grid">
+              <div class="grid__item half-width">
+                <ul>
+                  <li>Web-based Reporting</li>
+                  <li>Complete store installations</li>
+                  <li>Break/Fix services</li>
+                  <li>Competitive Pricing</li>
+                </ul>
+              </div>
+              <div class="grid__item half-width">
+                <ul>
+                  <li>Proven capability to handle unique projects</li>
+                  <li>Great client relationships</li>
+                  <li>Pride in having lifelong clients</li>
+                  <li>Scalable and flexible deployments</li>
+                </ul>
+              </div>
+            </div>
+        </div>
       </div>
     </div>
   </div>
