--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -46,6 +46,14 @@
                 </ul>
               </div>
             </div>
+
+            <p>
+              We adapt to any working environment from new store
+              construction, site remodels, and service work, we are
+              capable of doing it all. Tennessee Network Technologies
+              will go out of it's way to provide the solutions needed
+              for success.
+            </p>
         </div>
       </div>
     </div>
