--- a/app/styles/_reset.scss
+++ b/app/styles/_reset.scss
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  font-family: 'Roboto', sans-serif;
 }
 
 ul {
@@ -18,4 +19,9 @@ img {
 
 a {
   text-decoration: none;
+}
+
+p {
+  font-size: 16px;
+  line-height: 25px;
 }
