--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,20 +1,20 @@
 <div class="app">
   <nav class="navbar">
-    <div class="navbar__logo">
-      {{#link-to "home" class=""}}
+    <div class="navbar__content">
+      {{#link-to "home" class="navbar__logo"}}
         <p class="nav-link">TNT</p>
         {{!-- <img src="http://placecage.com/300/50" alt="" class="logo"> --}}
       {{/link-to}}
-    </div>
-    <div>
-      <ul class="navbar__links">
-        {{#link-to "companies" class="nav-link"}}Affiliated Companies{{/link-to}}
-        {{#link-to "contact" class="nav-link"}}Services{{/link-to}}
-        {{#link-to "contact" class="nav-link"}}Clients{{/link-to}}
-        {{#link-to "contact" class="nav-link"}}Solutions{{/link-to}}
-        {{#link-to "contact" class="nav-link"}}Contact Us{{/link-to}}
-        {{#link-to "contact" class="nav-link"}}Request Ticket{{/link-to}}
-      </ul>
+      <div>
+        <ul class="navbar__links">
+          {{#link-to "companies" class="nav-link"}}Affiliated Companies{{/link-to}}
+          {{#link-to "contact" class="nav-link"}}Services{{/link-to}}
+          {{#link-to "contact" class="nav-link"}}Clients{{/link-to}}
+          {{#link-to "contact" class="nav-link"}}Solutions{{/link-to}}
+          {{#link-to "contact" class="nav-link"}}Contact Us{{/link-to}}
+          {{#link-to "contact" class="nav-link"}}Request Ticket{{/link-to}}
+        </ul>
+      </div>
     </div>
   </nav>
 
