--- a/app/templates/clients.hbs
+++ b/app/templates/clients.hbs
@@ -1,1 +1,62 @@
-{{outlet}}
+<div class="section">
+  <div class="container">
+    <div class="title">
+      <h1 class="title-text">Our Clients</h1>
+    </div>
+    <p>Tennessee Network Technologies is experienced in a
+      vast array of services across all industries.
+      The following is an abbreviated list of where we have
+      provided support in our most commonly served industries
+      in the past.</p>
+    <h1 class="title-text">Retail</h1>
+    <div class="grid">
+      {{#each retail as |photo|}}
+        <div class="grid__item logo-width">
+          <div class="logo__card">
+            <img src="{{photo.src}}" alt="" class="logo">
+          </div>
+        </div>
+      {{/each}}
+    </div>
+    <h1 class="title-text">Retail</h1>
+    <div class="grid">
+      {{#each photos as |photo|}}
+        <div class="grid__item logo-width">
+          <div class="logo__card">
+            <img src="{{photo.src}}" alt="" class="logo">
+          </div>
+        </div>
+      {{/each}}
+    </div>
+    <h1 class="title-text">Retail</h1>
+    <div class="grid">
+      {{#each photos as |photo|}}
+        <div class="grid__item logo-width">
+          <div class="logo__card">
+            <img src="{{photo.src}}" alt="" class="logo">
+          </div>
+        </div>
+      {{/each}}
+    </div>
+    <h1 class="title-text">Retail</h1>
+    <div class="grid">
+      {{#each photos as |photo|}}
+        <div class="grid__item logo-width">
+          <div class="logo__card">
+            <img src="{{photo.src}}" alt="" class="logo">
+          </div>
+        </div>
+      {{/each}}
+    </div>
+    <h1 class="title-text">Retail</h1>
+    <div class="grid">
+      {{#each photos as |photo|}}
+        <div class="grid__item logo-width">
+          <div class="logo__card">
+            <img src="{{photo.src}}" alt="" class="logo">
+          </div>
+        </div>
+      {{/each}}
+    </div>
+  </div>
+</div>
