--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -13,7 +13,9 @@
   <div class="section">
     <div class="container">
       <div class="company">
-        <h1 class="title-text">About Us</h1>
+        <div class="title">
+          <h1 class="title-text">About Us</h1>
+        </div>
         <div class="company-overview">
           <p>Tennessee Network Technologies Inc. is a network
             infrastructure and special equipment installation company.
