Load financial and hospitality logos, set up clients controller

--- a/app/templates/clients.hbs
+++ b/app/templates/clients.hbs
@@ -20,7 +20,7 @@
     </div>
     <h1 class="title-text">Retail</h1>
     <div class="grid">
-      {{#each photos as |photo|}}
+      {{#each financial as |photo|}}
         <div class="grid__item logo-width">
           <div class="logo__card">
             <img src="{{photo.src}}" alt="" class="logo">
@@ -30,7 +30,7 @@
     </div>
     <h1 class="title-text">Retail</h1>
     <div class="grid">
-      {{#each photos as |photo|}}
+      {{#each hospitality as |photo|}}
         <div class="grid__item logo-width">
           <div class="logo__card">
             <img src="{{photo.src}}" alt="" class="logo">
@@ -40,7 +40,7 @@
     </div>
     <h1 class="title-text">Retail</h1>
     <div class="grid">
-      {{#each photos as |photo|}}
+      {{#each foodService as |photo|}}
         <div class="grid__item logo-width">
           <div class="logo__card">
             <img src="{{photo.src}}" alt="" class="logo">
@@ -50,7 +50,7 @@
     </div>
     <h1 class="title-text">Retail</h1>
     <div class="grid">
-      {{#each photos as |photo|}}
+      {{#each healthCare as |photo|}}
         <div class="grid__item logo-width">
           <div class="logo__card">
             <img src="{{photo.src}}" alt="" class="logo">
