Load food services logos

--- a/app/templates/clients.hbs
+++ b/app/templates/clients.hbs
@@ -18,7 +18,7 @@
         </div>
       {{/each}}
     </div>
-    <h1 class="title-text">Retail</h1>
+    <h1 class="title-text">Financial</h1>
     <div class="grid">
       {{#each financial as |photo|}}
         <div class="grid__item logo-width">
@@ -28,7 +28,7 @@
         </div>
       {{/each}}
     </div>
-    <h1 class="title-text">Retail</h1>
+    <h1 class="title-text">Hospitality</h1>
     <div class="grid">
       {{#each hospitality as |photo|}}
         <div class="grid__item logo-width">
@@ -38,7 +38,7 @@
         </div>
       {{/each}}
     </div>
-    <h1 class="title-text">Retail</h1>
+    <h1 class="title-text">Food Services</h1>
     <div class="grid">
       {{#each foodService as |photo|}}
         <div class="grid__item logo-width">
@@ -48,7 +48,7 @@
         </div>
       {{/each}}
     </div>
-    <h1 class="title-text">Retail</h1>
+    <h1 class="title-text">Health Care</h1>
     <div class="grid">
       {{#each healthCare as |photo|}}
         <div class="grid__item logo-width">
