--- a/app/templates/clients.hbs
+++ b/app/templates/clients.hbs
@@ -50,10 +50,10 @@
     </div>
     <h1 class="title-text">Health Care</h1>
     <div class="grid">
-      {{#each healthCare as |photo|}}
+      {{#each healthCare as |item|}}
         <div class="grid__item logo-width">
           <div class="logo__card">
-            <img src="{{photo.src}}" alt="" class="logo">
+            <p>{{item.text}}</p>
           </div>
         </div>
       {{/each}}
