--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -38,11 +38,12 @@
 .title {
   margin: 0;
   border-bottom: $s-border;
+  text-align: center;
 
   &-text {
-    text-align: center;
     font-family: $t-raj;
     font-size: 40px;
+    margin-bottom: 0;
   }
 }
 
@@ -58,9 +59,18 @@
   align-items: center;
 
   &__item {
+    // margin: 1rem;
   }
 }
 
 .half-width {
   width: calc(100% / 2 - 2rem);
+}
+
+.one-third-width {
+  width: calc(100% / 3 - 2rem);
+}
+
+.one-quarter-width {
+  width: calc(100% / 4);
 }
