--- a/app/templates/clients.hbs
+++ b/app/templates/clients.hbs
@@ -8,7 +8,9 @@
       The following is an abbreviated list of where we have
       provided support in our most commonly served industries
       in the past.</p>
-    <h1 class="title-text">Retail</h1>
+    <div class="title">
+      <h1 class="title-text">Retail</h1>
+    </div>
     <div class="grid">
       {{#each retail as |photo|}}
         <div class="grid__item logo-width">
@@ -18,17 +20,21 @@
         </div>
       {{/each}}
     </div>
+  <div class="title">
     <h1 class="title-text">Financial</h1>
+  </div>
     <div class="grid">
       {{#each financial as |photo|}}
-        <div class="grid__item logo-width">
+        <div class="grid__item half-width">
           <div class="logo__card">
             <img src="{{photo.src}}" alt="" class="logo">
           </div>
         </div>
       {{/each}}
     </div>
+  <div class="title">
     <h1 class="title-text">Hospitality</h1>
+  </div>
     <div class="grid">
       {{#each hospitality as |photo|}}
         <div class="grid__item logo-width">
@@ -38,20 +44,24 @@
         </div>
       {{/each}}
     </div>
+  <div class="title">
     <h1 class="title-text">Food Services</h1>
+  </div>
     <div class="grid">
       {{#each foodService as |photo|}}
-        <div class="grid__item logo-width">
+        <div class="grid__item one-quarter-width">
           <div class="logo__card">
             <img src="{{photo.src}}" alt="" class="logo">
           </div>
         </div>
       {{/each}}
     </div>
+  <div class="title">
     <h1 class="title-text">Health Care</h1>
+  </div>
     <div class="grid">
       {{#each healthCare as |item|}}
-        <div class="grid__item logo-width">
+        <div class="grid__item one-third-width">
           <div class="logo__card">
             <p>{{item.text}}</p>
           </div>
