Center one-third grid items

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -10,7 +10,7 @@
           {{#link-to "companies" class="nav-link"}}Affiliated Companies{{/link-to}}
           {{#link-to "contact" class="nav-link"}}Services{{/link-to}}
           {{#link-to "clients" class="nav-link"}}Clients{{/link-to}}
-          {{#link-to "contact" class="nav-link"}}Solutions{{/link-to}}
+          {{!-- {{#link-to "contact" class="nav-link"}}Solutions{{/link-to}} --}}
           {{#link-to "contact" class="nav-link"}}Contact Us{{/link-to}}
           {{#link-to "contact" class="nav-link"}}Request Ticket{{/link-to}}
         </ul>
