--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -38,9 +38,9 @@
 .title {
   margin: 0;
   border-bottom: $s-border;
-  text-align: center;
 
   &-text {
+    text-align: center;
     font-family: $t-raj;
     font-size: 40px;
     margin-bottom: 0;
@@ -68,7 +68,8 @@
 }
 
 .one-third-width {
-  width: calc(100% / 3 - 2rem);
+  width: calc(100% / 3);
+  text-align: center;
 }
 
 .one-quarter-width {
