edited 'companies' page

--- a/app/styles/companies.scss
+++ b/app/styles/companies.scss
@@ -1,11 +1,6 @@
 .logo-width {
-  width: 30rem;
-  padding: $m-gutter;
-  background-color: #fff;
-}
-
-.witt-background {
-  background: #38290A;
+  width: 50rem;
+  padding: $m-gutter * 2;
 }
 
 .lowercase {
