--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -8,11 +8,10 @@
       <div>
         <ul class="navbar__links">
           {{#link-to "companies" class="nav-link"}}Affiliated Companies{{/link-to}}
-          {{#link-to "contact" class="nav-link"}}Services{{/link-to}}
           {{#link-to "clients" class="nav-link"}}Clients{{/link-to}}
-          {{!-- {{#link-to "contact" class="nav-link"}}Solutions{{/link-to}} --}}
-          {{#link-to "contact" class="nav-link"}}Contact Us{{/link-to}}
-          {{#link-to "contact" class="nav-link"}}Request Ticket{{/link-to}}
+          <a class="nav-link" href="#">Services</a>
+          <a class="nav-link" href="#">Contact Us</a>
+          <a class="nav-link" href="#">Request Ticket</a>
         </ul>
       </div>
     </div>
