Fix clients grid and affiliated company logo sizing

--- a/app/templates/companies.hbs
+++ b/app/templates/companies.hbs
@@ -4,7 +4,7 @@
       <div class="panel panel-default">
         <div class="panel-heading">
           <div class="panel-title">
-            <a class="align-center" href="http://blackdogsurplus.net"><img class="logo-width" src="/img/black-dog-logo.png" alt=""></a>
+            <a class="align-center" href="http://blackdogsurplus.net"><img class="company-image" src="/img/black-dog-logo.png" alt=""></a>
           </div>
         </div>
         <div class="panel-body align-center">
