--- a/app/styles/clients.scss
+++ b/app/styles/clients.scss
@@ -1,6 +1,20 @@
+.half-width {
+  width: calc(100% / 2);
+}
+
+.one-third-width {
+  width: calc(100% / 3);
+  text-align: center;
+}
+
+.one-quarter-width {
+  width: calc(100% / 4);
+}
+
 .logo  {
 
   &-width {
     width: calc(100% / 5 - 2rem);
+    margin: 1rem;
   }
 }
