--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h2 class="align-center">Contact Us</h2>
+          <h2 class="title-text">Contact Us</h2>
           <h4 class="align-center">We would love to hear from you!</h4>
         </div>
         <ul class="list-group">
@@ -11,7 +11,7 @@
             <ul>
                 <h4>Mailing Address:</h4>
                 <h4>242 West Main Street</h4>
-                <h4>Suite 116</h4>
+                <h4>Suite 219</h4>
                 <h4>Hendersonville TN 37075</h4>
             </ul>
           </li>
