Very very rough mockup of services page

--- a/app/templates/clients.hbs
+++ b/app/templates/clients.hbs
@@ -1,7 +1,7 @@
 <div class="section">
   <div class="container">
     <h1 class="title-text">Our Clients</h1>
-    <p>Tennessee Network Technologies is experienced in a
+    <p class="body-text">Tennessee Network Technologies is experienced in a
       vast array of services across all industries.
       The following is an abbreviated list of where we have
       provided support in our most commonly served industries
