--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -31,15 +31,15 @@
             <h3 class="subtitle">Tennessee Network Technologies Offers:</h3>
 
             <div class="grid">
-              <div class="grid__item half-width">
+              <div class="grid__item one-half-width">
                 <ul>
-                  <li>Web-based Reporting</li>
+                  <li>Web-based reporting</li>
                   <li>Complete store installations</li>
                   <li>Break/Fix services</li>
-                  <li>Competitive Pricing</li>
+                  <li>Competitive pricing</li>
                 </ul>
               </div>
-              <div class="grid__item half-width">
+              <div class="grid__item one-half-width">
                 <ul>
                   <li>Proven capability to handle unique projects</li>
                   <li>Great client relationships</li>
