Bullet points in lists

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -30,6 +30,7 @@ $s-border: #d6d6d6 solid 0.1rem;
 @import 'contact';
 @import 'companies';
 @import 'clients';
+@import 'services';
 
 @import url('https://fonts.googleapis.com/css?family=Rajdhani|Roboto');
 
