--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -33,18 +33,18 @@
             <div class="grid">
               <div class="grid__item one-half-width">
                 <ul>
-                  <li>Web-based reporting</li>
-                  <li>Complete store installations</li>
-                  <li>Break/Fix services</li>
-                  <li>Competitive pricing</li>
+                  <li>• Web-based reporting</li>
+                  <li>• Complete store installations</li>
+                  <li>• Break/Fix services</li>
+                  <li>• Competitive pricing</li>
                 </ul>
               </div>
               <div class="grid__item one-half-width">
                 <ul>
-                  <li>Proven capability to handle unique projects</li>
-                  <li>Great client relationships</li>
-                  <li>Pride in having lifelong clients</li>
-                  <li>Scalable and flexible deployments</li>
+                  <li>• Proven capability to handle unique projects</li>
+                  <li>• Great client relationships</li>
+                  <li>• Pride in having lifelong clients</li>
+                  <li>• Scalable and flexible deployments</li>
                 </ul>
               </div>
             </div>
