--- a/app/templates/services.hbs
+++ b/app/templates/services.hbs
@@ -31,17 +31,17 @@
           <div class="grid">
             <div class="grid__item one-half-width">
               <ul>
-                <li>Site Surveys</li>
-                <li>Infrastructure Cabling</li>
-                <li>Equipment Setup, Activation, and Testing</li>
-                <li>Asset Tagging</li>
+                <li>• Site Surveys</li>
+                <li>• Infrastructure Cabling</li>
+                <li>• Setup, Activation, and Testing</li>
               </ul>
             </div>
             <div class="grid__item one-half-width">
               <ul>
-                <li>Break/Fix</li>
-                <li>Software Installation</li>
-                <li>De-Installations</li>
+                <li>• Asset Tagging</li>
+                {{!-- <li>Break/Fix</li> --}}
+                <li>• Software Installation</li>
+                <li>• De-Installations</li>
               </ul>
             </div>
           </div>
