Add rough images on services page

--- a/app/templates/services.hbs
+++ b/app/templates/services.hbs
@@ -14,6 +14,11 @@
       can cover every low voltage aspect that you need.</p>
     <div class="grid">
       <div class="grid__item one-half-width">
+        <div class="card grid__image">
+          <img src="/img/web-based.jpg" alt="" class="">
+        </div>
+      </div>
+      <div class="grid__item one-half-width">
         <div class="card">
           <hi class="title-text">Web-based Services</hi>
           <p>
@@ -25,6 +30,7 @@
           </p>
         </div>
       </div>
+
       <div class="grid__item one-half-width">
         <div class="card">
           <hi class="title-text">On-site Services</hi>
@@ -44,12 +50,18 @@
                 <li>• De-Installations</li>
               </ul>
             </div>
+            <p class="no-margin">
+              Our services are not limited to the above list. We can provide cabling
+              and support for, data, voice, CCTV, and wireless; complete installation
+              and setup to install specification.
+            </p>
           </div>
-          <p>
-            Our services are not limited to the above list. We can provide cabling
-            and support for, data, voice, CCTV, and wireless; complete installation
-            and setup to install specification.
-          </p>
+        </div>
+      </div>
+
+      <div class="grid__item one-half-width">
+        <div class="card grid__image">
+          <img src="/img/on-site.png" alt="" class="">
         </div>
       </div>
     </div>
