Fix half-width logos

--- a/app/templates/clients.hbs
+++ b/app/templates/clients.hbs
@@ -23,7 +23,7 @@
   </div>
     <div class="grid">
       {{#each financial as |photo|}}
-        <div class="grid__item half-width">
+        <div class="grid__item one-half-width">
           <div class="logo__card">
             <img src="{{photo.src}}" alt="" class="logo">
           </div>
