--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -11,7 +11,7 @@
           {{#link-to "services" class="nav-link"}}Services{{/link-to}}
           {{#link-to "clients" class="nav-link"}}Clients{{/link-to}}
           {{#link-to 'contact' class="nav-link"}}Contact Us{{/link-to}}
-          <a class="nav-link" href="#">Request Ticket</a>
+          {{!-- <a class="nav-link" href="#">Request Ticket</a> --}}
         </ul>
       </div>
     </div>
