Add logo and change height of banner

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,8 +2,8 @@
   <nav class="navbar">
     <div class="navbar__content">
       {{#link-to "home" class="navbar__logo"}}
-        <p class="nav-link">TNT</p>
-        {{!-- <img src="http://placecage.com/300/50" alt="" class="logo"> --}}
+        {{!-- <p class="nav-link">TNT</p> --}}
+        <img src="img/tnt-logo.png" alt="" class="logo">
       {{/link-to}}
       <div>
         <ul class="navbar__links">
