--- a/app/templates/services.hbs
+++ b/app/templates/services.hbs
@@ -13,12 +13,12 @@
       to new store construction, Tennessee Network Technologies
       can cover every low voltage aspect that you need.</p>
     <div class="grid">
-      <div class="grid__item one-half-width">
-        <div class="card grid__image">
+      <div class="grid__item image">
+        <div class="card">
           <img src="/img/web-based.jpg" alt="" class="">
         </div>
       </div>
-      <div class="grid__item one-half-width">
+      <div class="grid__item info">
         <div class="card">
           <hi class="title-text">Web-based Services</hi>
           <p>
@@ -31,7 +31,7 @@
         </div>
       </div>
 
-      <div class="grid__item one-half-width">
+      <div class="grid__item info">
         <div class="card">
           <hi class="title-text">On-site Services</hi>
           <div class="grid">
@@ -59,8 +59,8 @@
         </div>
       </div>
 
-      <div class="grid__item one-half-width">
-        <div class="card grid__image">
+      <div class="grid__item image">
+        <div class="card">
           <img src="/img/on-site.png" alt="" class="">
         </div>
       </div>
