--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,8 +2,7 @@
   <nav class="navbar">
     <div class="navbar__content">
       {{#link-to "home" class="navbar__logo"}}
-        {{!-- <p class="nav-link">TNT</p> --}}
-        <img src="img/tnt-logo.png" alt="" class="logo">
+        <img src="img/tnt-logo.png" alt="" class="">
       {{/link-to}}
       <div>
         <ul class="navbar__links">
