--- a/app/styles/companies.scss
+++ b/app/styles/companies.scss
@@ -1,8 +1,18 @@
-.company-image {
-  width: 15rem;
-  padding: $m-gutter * 2;
-}
+.company {
+  border-radius: 1rem;
+  margin-top: 2rem;
 
-.lowercase {
-  font-size: 18.5px;
+  &__header {
+    background: rgba($c-grey, 0.3);
+    margin: 0;
+
+    &_text {
+      margin: 0;
+    }
+  }
+
+  &__image {
+    width: 15rem;
+    padding: $m-gutter * 2;
+  }
 }
