--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -13,7 +13,8 @@ $t-raj: 'Rajdhani', sans-serif;
 $s-border: #d6d6d6 solid 0.08rem;
 
 @import 'reset';
-@import "home";
+@import 'home';
+@import 'navbar';
 @import 'contact';
 @import 'companies';
 @import 'clients';
@@ -22,7 +23,7 @@ $s-border: #d6d6d6 solid 0.08rem;
 @import url('https://fonts.googleapis.com/css?family=Rajdhani|Roboto');
 
 .app {
-  position: relative;
+
 }
 
 .section {
@@ -36,47 +37,6 @@ $s-border: #d6d6d6 solid 0.08rem;
 
 .below-nav {
   padding-top: 5rem;
-}
-
-.navbar {
-  background: $c-dark-grey;
-  width: 100%;
-
-  &__content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-family: $t-raj;
-    max-width: 65rem;
-    margin: 0 auto;
-  }
-
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-
-  &__logo {
-    width: 8rem;
-    padding: 0.5rem;
-  }
-
-  &__links {
-    display: flex;
-  }
-}
-
-.nav-link {
-  margin: $m-gutter;
-  font-size: 18px;
-  color: $c-grey;
-  font-size: 20px;
-  text-align: center;
-
-  &:hover {
-    color: $c-white;
-    transition: 0.5s;
-  }
 }
 
 .footer {
