--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -1,6 +1,6 @@
 .banner {
   width: 100%;
-  height: 35rem;
+  height: 38rem;
   background: url('../img/code-bg-alt.jpg') no-repeat fixed;
   background-size: cover;
   margin: -5rem 0 0 0;
@@ -10,12 +10,12 @@
   justify-content: center;
 
   &__content {
-    padding: 1rem;
+    padding: 2rem;
     width: 70%;
   }
 
   &__text {
-    font-size: 65px;
+    font-size: 4.3rem;
     color: $c-white;
     margin: 0;
     font-family: $t-raj;
@@ -63,5 +63,19 @@
   align-items: center;
 
   &__item {
+  }
+}
+
+@media (min-width: 320px) and (max-width: 650px) {
+  .banner {
+    height: 30rem;
+
+    &__content {
+      padding: 1rem;
+    }
+
+    &__text {
+      font-size: 3rem;
+    }
   }
 }
