Refactor services list

--- a/app/templates/services.hbs
+++ b/app/templates/services.hbs
@@ -35,21 +35,15 @@
         <div class="card">
           <hi class="title-text">On-site Services</hi>
           <div class="grid">
-            <div class="grid__item one-half-width">
-              <ul>
-                <li>• Site Surveys</li>
-                <li>• Infrastructure Cabling</li>
-                <li>• Setup, Activation, and Testing</li>
-              </ul>
-            </div>
-            <div class="grid__item one-half-width">
-              <ul>
-                <li>• Asset Tagging</li>
-                {{!-- <li>Break/Fix</li> --}}
-                <li>• Software Installation</li>
-                <li>• De-Installations</li>
-              </ul>
-            </div>
+            <ul>
+              <li>• Site Surveys</li>
+              <li>• Infrastructure Cabling</li>
+              <li>• Setup, Activation, and Testing</li>
+              <li>• Asset Tagging</li>
+              <li>• Break/Fix</li>
+              <li>• Software Installation</li>
+              <li>• De-Installations</li>
+            </ul>
             <p class="no-margin">
               Our services are not limited to the above list. We can provide cabling
               and support for, data, voice, CCTV, and wireless; complete installation
