--- a/app/styles/_reset.scss
+++ b/app/styles/_reset.scss
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: $t-roboto;
+  font-family: $t-roboto, sans-serif;
 }
 
 ul {
@@ -29,6 +29,13 @@ a {
 }
 
 p {
-  font-size: 16px;
-  line-height: 25px;
+  line-height: 30px;
+}
+
+@media (min-width: 320px) and (max-width: 650px) {
+  ul {
+    column-count: 1;
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+  }
 }
