--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -12,11 +12,11 @@
   </div>
   <div class="section">
     <div class="container">
-      <div class="company">
+      <div class="about">
         <div class="title">
           <h1 class="title-text">About Us</h1>
         </div>
-        <div class="company-overview">
+        <div class="about__text">
           <p>Tennessee Network Technologies Inc. is a network
             infrastructure and special equipment installation company.
             Tennessee Network Technologies has technicians in every
