Contact list layout fixed

--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,40 +1,15 @@
-<div class="content">
-  <div class="section">
-    <div class="container">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h2 class="title-text">Contact Us</h2>
-          <h4 class="align-center">We would love to hear from you!</h4>
-        </div>
-        <ul class="list-group">
-          <li class="list-group-item align-center panel-default">
-            <ul>
-                <h4>Mailing Address:</h4>
-                <h4>242 West Main Street</h4>
-                <h4>Suite 219</h4>
-                <h4>Hendersonville TN 37075</h4>
-            </ul>
-          </li>
-          <li class="list-group-item align-center panel-default">
-            <ul>
-              <h4>dispatch@tnnettech.com</h4>
-            </ul>
-          </li>
-          <li class="list-group-item align-center panel-default">
-            <ul>
-              <h4>Phone: 615-264-8656</h4>
-              <h4>Fax: 888-507-5696</h4>
-            </ul>
-          </li>
-          {{!-- <div class="list-group-item align-center panel-default social">
-            <a target="_blank" href="#"><i class="fa fa-facebook-square social-icon social-fb" aria-hidden="true"></i></a>
-            <a target="_blank" href="#"><i class="fa fa-twitter-square social-icon social-tt" aria-hidden="true"></i></a>
-            <a target="_blank" href="#"><i class="fa fa-linkedin-square social-icon social-li" aria-hidden="true"></i></a>
-          </div> --}}
-        </ul>
-      </div>
-    </div>
+<div class="section">
+  <div class="container">
+    <ul class="align-center">
+      <h2 class="title-text">Contact Us</h2>
+      <li>We would love to hear from you!</li>
+      <li>Mailing Address:</li>
+      <li>242 West Main Street</li>
+      <li>Suite 219</li>
+      <li>Hendersonville TN 37075</li>
+      <li>dispatch@tnnettech.com</li>
+      <li>Phone: 615-264-8656</li>
+      <li>Fax: 888-507-5696</li>
+    </ul>
   </div>
 </div>
-
-{{outlet}}
