--- a/app/styles/contact.scss
+++ b/app/styles/contact.scss
@@ -1,8 +1,9 @@
 .align-center {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
+  // text-align: center;
 }
 
 .social {
