--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,14 +1,16 @@
 <div class="section">
   <div class="container">
-    <ul class="align-center">
+    <div class="title">
       <h2 class="title-text">Contact Us</h2>
+    </div>
+    <ul class="align-center">
       <li>We would love to hear from you!</li>
       <li>Mailing Address:</li>
       <li>242 West Main Street</li>
       <li>Suite 219</li>
-      <li>Hendersonville TN 37075</li>
-      <li>dispatch@tnnettech.com</li>
-      <li>Phone: 615-264-8656</li>
+      <li>Hendersonville, TN 37075</li>
+      <li>Email: <a href="mailto:dispatch@tnnettech.com">dispatch@tnnettech.com</a></li>
+      <li>Phone: <a href="tel:1-615-264-8656">615-264-8656</a></li>
       <li>Fax: 888-507-5696</li>
     </ul>
   </div>
